<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/mediaContainer"
        android:layout_width="match_parent"
        android:layout_height="500dp">

        <ImageView
            android:id="@+id/feedItemImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieBar"
            app:lottie_rawRes="@raw/loaderwhite"
            app:lottie_autoPlay="true"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:visibility="gone" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.75">

                <TextView
                    android:id="@+id/feedItemAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/feed_title_example"
                    android:textSize="50dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/feedItemPricePoint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/feed_category_number_example"
                    android:textAlignment="center"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/feedItemMusic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/feed_category_example"
                    android:textAlignment="center"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/feedItemDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feed_description_example" />

    </LinearLayout>

</LinearLayout>