<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screen.PlaybackActivity">

    <ProgressBar
        android:id="@+id/playbackProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center" />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#000">

        <FrameLayout
            android:id="@+id/mediaContainer"
            android:layout_width="match_parent"
            android:layout_height="500dp">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/progressBar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:visibility="visible"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/loaderwhite"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/author"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="OLGA\nBoznanka"
                        android:textSize="45sp"
                        android:textColor="#FFF"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/feed_category_number_example"
                        android:textAlignment="center"
                        android:textColor="#FFF"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/genre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/feed_category_example"
                        android:textAlignment="center"
                        android:textColor="#FFF"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>
            <TextView
                android:visibility="gone"
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:textColor="#FFF"
                android:layout_height="wrap_content"
                android:text="@string/feed_description_example" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="42dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/share"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_gravity="top"
                android:src="@drawable/ic_share_up"
                android:contentDescription="@string/share" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>